--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,6 +18,26 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Install Google Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget gnupg
+        wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list'
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
+    - name: Install ChromeDriver (match Chrome version)
+      run: |
+        CHROME_VERSION=$(google-chrome --version | sed 's/[^0-9.]//g' | cut -d'.' -f1)
+        echo "Installed Chrome version: $CHROME_VERSION"
+        DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_$CHROME_VERSION")
+        echo "Downloading ChromeDriver version: $DRIVER_VERSION"
+        wget -q "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$DRIVER_VERSION/linux64/chromedriver-linux64.zip"
+        unzip chromedriver-linux64.zip
+        sudo mv chromedriver-linux64/chromedriver /usr/bin/chromedriver
+        sudo chmod +x /usr/bin/chromedriver
+
     - name: Install Dependencies
       run: |
         pip install -r requirements.txt
